<resources>
    <string name="app_name">Mạnh Thường Quân</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_phone_number">Số điện thoại</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_button_text">Đăng nhập</string>
    <string name="login_password_forget">Quên mật khẩu?</string>
    <string name="login_register_text">Đăng ký</string>

    <string name="register_borrower_content">Người đi vay là công dân Việt Nam,
        có thể là sinh viên, người đi làm công, chủ doanh nghiệp, người làm
        nghề tự do. Bạn đang gặp chút khó khăn về tài chính để trang trải cuộc sống,
        cho một sự lựa chọn nào đó. Mạnh Thường Quân sẽ giúp bạn.</string>
    <string name="register_loaner_content">"Người cho vay là các Cá nhân, Tổ chức đang hoạt động trong lĩnh vực Tín dụng tiêu dùng với mong muốn giúp người Việt tháo gỡ khó khăn tài chính và nâng cao chất lượng cuộc sống."</string>
    <string name="register_shop_content">"Người Bán là người đang kinh doanh, bán lẻ Hàng hóa có nhu cầu bán hàng trả góp thông qua hệ thống Mạnh Thường Quân."</string>
    <string name="register_step1_borrower_title">Tôi là người đi vay</string>
    <string name="register_step1_loaner_title">Tôi là người cho vay</string>
    <string name="register_step1_shop_title">Tôi là người bán hàng trả góp</string>
    <string name="register_button_continue">Tiếp tục</string>
    <string name="register_button_complete">Hoàn tất</string>
    <string name="register_step1_title">Bước 1</string>
    <string name="register_step1_content">Lựa chọn loại tài khoản</string>
    <string name="register_step2_title">Bước 2</string>
    <string name="register_step2_content">Nhập và xác nhận số điện thoại</string>
    <string name="register_step2_1_phone_hint">Nhập số điện thoại</string>
    <string name="register_step2_verity_text">Chúng tôi đã gửi một mã xác nhận qua tin nhắn SMS tới số điện thoại </string>
    <string name="register_step2_verity_text_2">Xin vui lòng nhập mã vào ô trống dưới đây để xác thực số điện thoại. </string>
    <string name="register_step2_otp_edittext_hint">Nhập OTP</string>
    <string name="register_step2_resend_code_otp">Tôi không nhận được mã xác nhận/Gửi lại</string>
    <string name="register_step3_title">Bước 3</string>
    <string name="register_step3_content">Nhập thông tin cơ bản để khởi tạo tài khoản</string>
    <string name="register_step3_enter_name">Nhập họ &amp; tên</string>
    <string name="register_step3_enter_password">Nhập mật khẩu</string>
    <string name="register_step3_enter_password_again">Nhập lại mật khẩu</string>
    <string name="register_step3_complete_button">Hoàn tất</string>

    <string name="foget_tep_1_title">Bước 1</string>
    <string name="foget_tep_1_content">Nhập số điện thoại</string>
    <string name="foget_tep_2_content">Xác nhận số điện thoại</string>
    <string name="foget_tep_3_content">Tạo mật khẩu mới</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới</string>

    <string name="success_congratunation_text">Chúc mừng</string>
    <string name="success_content_1">Bạn đã đăng ký tài khoản thành công</string>
    <string name="success_content_2">Để gửi được yêu cầu vay, vui lòng điền đầy đủ thông tin cơ bản bằng cách chạm vào
        biểu tượng dưới đây</string>
    <string name="success_button_ignore">BỎ QUA</string>

    <string name="error_passwords_nhap_lai_pass">Bạn cần nhập lại mật khẩu</string>
    <string name="error_passwords_null">Bạn cần nhập mật khẩu</string>
    <string name="error_passwords_khongtrungnhau">Mật khẩu cần giống nhau</string>
    <string name="error_passwords_chuaso">Mật khẩu phải chứa 1 chữ số</string>
    <string name="error_passwords_inhoa">Chữ cái đầu tiên phải là chữ in hoa</string>
    <string name="error_passwords_doai6den8">Mật khẩu phải từ 6 đến 50 ký tự</string>

    <string name="home_page_title">Trang chủ</string>
    <string name="home_page_user_title">Tài khoản</string>
    <string name="home_page_inform_title">Thông báo</string>
    <string name="home_page_help_title">Trợ giúp</string>
    <string name="home_page_make_request_loan_cash">Tạo yêu cầu\n vay tiền mặt</string>
    <string name="home_page_history_loan_cash">Lịch sử vay\n tiền mặt</string>
    <string name="home_page_list_loaner">Danh sách\n người cho vay</string>
    <string name="home_page_make_request_instalment">Tạo yêu cầu\n vay mua trả góp</string>
    <string name="home_page_history_instalment">Lịch sử vay\n mua trả góp</string>
    <string name="home_page_list_shop_instalment">Danh sách\n cửa hàng trả góp</string>
    <string name="home_page_news_mtq">Tin tức\n MTQ</string>
    <string name="home_page_help">Hướng dẫn/\nTrợ giúp</string>
    <string name="home_page_contact">Liên hệ\n </string>
    <string name="home_page_hello_user">Xin chào %1$s,</string>
    <string name="home_page_user_number">Hiện có &lt;font color=\'#FF0000\'>%1$d&lt;/font> người duyệt yêu cầu vay tiền mặt\n Bạn chưa có yêu cầu vay mua trả góp</string>

    <string name="name_hosocanhan">Hồ sơ cá nhân</string>
    <string name="name_banla">Bạn là?</string>
    <string name="name_luachonnghe">Lựa chọn trạng thái nghề nghiệp của bạn</string>
    <string name="name_sinhvien">Sinh viên</string>
    <string name="name_nguoilamtudo">Người làm tự do</string>
    <string name="name_nguoidilam">Người đi làm</string>
    <string name="name_chudoanhnghiep">Chủ doanh nghiệp</string>
</resources>
