<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_big">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:text="@string/success_congratunation_text"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold"
        />
    <TextView 
        android:id="@+id/name_congratunation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/success_content_1"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/success_content_2"
        />
    
    <ImageView 
        android:id="@+id/edit_information"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ico_pen"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        >
        <Button 
            android:id="@+id/success_ignore_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/success_ignore_button"
            android:text="@string/success_button_ignore"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    
</LinearLayout>
