<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textView_step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a587"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/txtBuoc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step3_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTitleBuoc3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step3_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_below="@id/textView_step3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_step3_name_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_people"
            android:drawablePadding="15dp"
            android:hint="@string/register_step3_enter_name"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E8EB" />

        <EditText
            android:id="@+id/register_step3_password_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_key"
            android:drawablePadding="15dp"
            android:hint="@string/register_step3_enter_password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E8EB" />

        <EditText
            android:id="@+id/register_step3_password_again_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_key"
            android:drawablePadding="15dp"
            android:hint="@string/register_step3_enter_password_again"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E8EB" />

    </LinearLayout>

    <Button
        android:id="@+id/register_step3_complete_button_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_button_effect"
        android:drawableRight="@drawable/ico_angle_right"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/register_step3_complete_button"
        android:textColor="@color/white"
        android:textSize="23dp" />

</RelativeLayout>