<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textView_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a587"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/txtBuoc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step1_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTitleBuoc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step1_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/register_expand_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView_step1"
        android:layout_marginBottom="52dp"
        android:choiceMode="singleChoice"
        android:groupIndicator="@null" />

    <Button
        android:id="@+id/register_step1_continute_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/login_button_effect"
        android:drawableRight="@drawable/ico_angle_right"
        android:gravity="left|center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/register_button_continue"
        android:textColor="@color/white"
        android:textSize="25dp" />

</RelativeLayout>