<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#26a587"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step2_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/register_step2_content"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:text="+84"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/register_step2_1_phone_number"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/register_step2_1_phone_hint"
                android:numeric="integer"
                android:textSize="18dp"
                android:textColorHint="#d4d4d6" />

            <ImageView
                android:id="@+id/register_step2_erase_id"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@drawable/ico_erase"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/register_step2_1_ok_button"
            android:text="OK"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout2"
        android:background="#AAD4A4">

        <LinearLayout
            android:id="@+id/register_step2_otp_inform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/white_smoke"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_step2_otp_textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/register_step2_verity_text"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/register_step2_otp_textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/register_step2_verity_text_2"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/register_step2_otp_layout_id"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="130dp"
                android:background="@drawable/bg_otp"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/register_step2_otp_edittext"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/register_step2_otp_edittext_hint"
                        android:paddingLeft="10dp"
                        android:textColorHint="@color/hint_color" />

                    <Button
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="#9FA4AA"
                        android:layout_marginRight="8dp"
                        android:text="OK"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/white" />
                </LinearLayout>
                
                <TextView
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ico_mobile_2"
                    android:paddingRight="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="@string/register_step2_resend_code_otp"/>
                
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>