<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_big"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textView_step3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a587"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/foget_passwords_step3_padding_bottom"
        android:paddingTop="@dimen/foget_passwords_step3_padding_top">

        <TextView
            android:id="@+id/txtBuoc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/foget_passwords_txtBuoc3FogetPass_margin_left"
            android:text="@string/register_step3_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTitleBuoc3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/foget_passwords_txtTitleBuoc3FogetPass_margin_left"
            android:text="@string/foget_tep_3_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/foget_passwords_box_margin_left"
        android:layout_marginRight="@dimen/foget_passwords_box_margin_right">

        <EditText
            android:id="@+id/editPassNew"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/line_1_foget_pass_step3"
            android:gravity="center_vertical"
            android:hint="@string/nhap_mat_khau_moi"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="@dimen/forget_passwords_padding_left"
            android:textColor="@color/gray"
            android:textColorHint="#d4d4d6"
            android:textSize="@dimen/forget_passwords_textsize" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/editPassNew"
            android:background="@color/color_line" />

        <EditText
            android:id="@+id/editConfirmPassNew"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/line1"
            android:background="@drawable/line_2_foget_pass_step3"
            android:gravity="center_vertical"
            android:hint="@string/nhap_lai_mat_khau_moi"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="@dimen/forget_passwords_padding_left"
            android:textColor="@color/gray"
            android:textColorHint="#d4d4d6"
            android:textSize="@dimen/forget_passwords_textsize" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/editConfirmPassNew"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/txtConfirmChangePass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/line2"
            android:background="@drawable/line_3_foget_pass_step3"
            android:gravity="center"
            android:text="OK"
            android:textColor="@color/white"
            android:textColorHint="#d4d4d6"
            android:textSize="@dimen/forget_passwords_textsize_OK" />
    </RelativeLayout>

</RelativeLayout>