<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a587"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/foget_passwords_step1_padding_bottom"
        android:paddingTop="@dimen/foget_passwords_step1_padding_top">

        <TextView
            android:id="@+id/txtBuoc1FogetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/foget_passwords_txtBuoc1FogetPass_margin_left"
            android:text="@string/foget_tep_1_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtTitleBuoc1FogetPass"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/foget_passwords_txtTitleBuoc1FogetPass_margin_left"
            android:text="@string/foget_tep_1_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDauSo"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/foget_passwords_txtDauSo_marginLeft"
                android:gravity="center"
                android:text="+84"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/gray"
                android:textSize="@dimen/foget_passwords_textsize_txtDauSo" />

            <EditText
                android:id="@+id/editPhoneFogetPass"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/register_step2_1_phone_hint"
                android:lines="1"
                android:maxLines="1"
                android:numeric="integer"
                android:textColor="@color/gray"
                android:textColorHint="#d4d4d6"
                android:textSize="@dimen/foget_passwords_textsize_txtDauSo" />

            <ImageView
                android:id="@+id/btnDeletePhoneFogetPass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/foget_passwords_deletePhone_margin_right"
                android:src="@drawable/ico_erase"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/btnOKFogetPass"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/register_step2_1_ok_button_effect"
            android:text="OK"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/foget_passwords_txtOK_marginLeft" />
    </LinearLayout>
</RelativeLayout>